🚧 Set margin to .global-footer to prevent it from being overlapped by .order-cta

--- a/styles/layouts/_global-footer.scss
+++ b/styles/layouts/_global-footer.scss
@@ -1,5 +1,6 @@
 .global-footer {
   background-color: $background;
+  margin-bottom: $order-cta-height;
   padding: 32px 0 40px;
 
   &-title {
@@ -44,6 +45,8 @@
   }
 
   @include responsive(D) {
+    margin-bottom: 0;
+
     &-title {
       @include text-style(14);
     }
